--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
   "readmeFilename": "README.md",
   "author": "Daniel Varga",
   "license": "MIT",
-  "contributors": [{
-    "name": "Daniel Varga",
-    "email": "varga.daniel@gmx.de"
-  }]
+  "contributors": [
+    {
+      "name": "Daniel Varga",
+      "email": "varga.daniel@gmx.de"
+    }
+  ],
+  "main": "lib/Nominandi",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "lib"
+  ]
 }
